force-app/main/default/objects/Dependents__c/fields/Aboriginal_Torres_Strait_Origin__c.field-meta.xml
<CustomField>
    <fullName>Aboriginal_Torres_Strait_Origin__c</fullName>
    <description>Indicates Aboriginal or Torres Strait Islander origin</description>
    <inlineHelpText>Indicates Aboriginal or Torres Strait Islander origin</inlineHelpText>
    <label>Aboriginal/Torres Strait Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Aboriginal_Torres_Strait_Islander_Origin</valueSetName>
    </valueSet>
</CustomField>