force-app/main/default/objects/Dependents__c/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <inlineHelpText>The birthdate of the Dependent you are creating a record for</inlineHelpText>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>