force-app/main/default/objects/Dependents__c/fields/Comorbidity__c.field-meta.xml
<CustomField>
    <fullName>Comorbidity__c</fullName>
    <label>Comorbidity</label>
    <type>TextArea</type>
</CustomField>