force-app/main/default/objects/Dependents__c/fields/Contact_Conv_Next_Contact_Date_is_Today__c.field-meta.xml
<CustomField>
    <fullName>Contact_Conv_Next_Contact_Date_is_Today__c</fullName>
    <formula>Contact_Conversion_Next_Contact_Date__c = Today()</formula>
    <label>Contact Conv_Next Contact Date is Today</label>
    <type>Checkbox</type>
</CustomField>