force-app/main/default/objects/Dependents__c/fields/Contact_Conversion_Declined__c.field-meta.xml
<CustomField>
    <fullName>Contact_Conversion_Declined__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Primary Contact declined conversion to Contact via Formstack form</description>
    <label>Contact Conversion Declined</label>
    <type>Checkbox</type>
</CustomField>