force-app/main/default/objects/Dependents__c/fields/Contact_Conversion_Declined_Reason__c.field-meta.xml
<CustomField>
    <fullName>Contact_Conversion_Declined_Reason__c</fullName>
    <inlineHelpText>Decline reason provided by Primary Contact via Formstack form as a part of Contact Conversion process</inlineHelpText>
    <label>Contact Conversion Declined Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>