force-app/main/default/objects/Dependents__c/fields/Contact_Conversion_Process_Started__c.field-meta.xml
<CustomField>
    <fullName>Contact_Conversion_Process_Started__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked automatically via Flow the morning that this Dependent turns 14</description>
    <label>Contact Conversion Process Started</label>
    <type>Checkbox</type>
</CustomField>