force-app/main/default/objects/Dependents__c/fields/Dependent_Age__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Age__c</fullName>
    <description>Calculates Age of Contact if &apos;Birthdate&apos; is not blank</description>
    <formula>IF( NOT( ISBLANK(  Birthdate__c ) ) ,
IF( DATE( 2000 , MONTH(  Birthdate__c ) , DAY(  Birthdate__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
YEAR (Today()) - YEAR (  Birthdate__c ),
YEAR (Today()) - YEAR (  Birthdate__c ) -1 ),
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates Age of Contact if &apos;Birthdate&apos; is not blank</inlineHelpText>
    <label>Dependent Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>