force-app/main/default/objects/Dependents__c/fields/Dependent_to_Contact_Form_URL__c.field-meta.xml
<CustomField>
    <fullName>Dependent_to_Contact_Form_URL__c</fullName>
    <description>Not on Page Layout
Included in Email Template sent to Primary Contact as part of Dependent to Contact process
Allows for prefilled form fields</description>
    <label>Dependent to Contact Form URL</label>
    <type>Url</type>
</CustomField>