force-app/main/default/objects/Dependents__c/fields/Dependent_Type__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Type__c</fullName>
    <label>Dependent Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heart Kid</fullName>
            </value>
            <value>
                <fullName>Heart Kid Sibling</fullName>
            </value>
            <value>
                <fullName>Heart Angel Sibling</fullName>
            </value>
            <value>
                <fullName>Heart Angel</fullName>
            </value>
            <value>
                <fullName>Child of Heart Kid Adult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>