force-app/main/default/objects/Dependents__c/fields/Dependents_Deceased_Date__c.field-meta.xml
<CustomField>
    <fullName>Dependents_Deceased_Date__c</fullName>
    <label>Dependents Deceased Date</label>
    <type>Date</type>
</CustomField>