force-app/main/default/objects/Dependents__c/fields/Heart_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Heart_Conditions__c</fullName>
    <label>Heart Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Heart_Conditions</valueSetName>
    </valueSet>
</CustomField>