force-app/main/default/objects/Dependents__c/fields/Linked_Lead__c.field-meta.xml
<CustomField>
    <fullName>Linked_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Dependents</relationshipLabel>
    <relationshipName>Dependents</relationshipName>
    <type>Lookup</type>
</CustomField>