force-app/main/default/objects/Dependents__c/fields/Little_YAC__c.field-meta.xml
<CustomField>
    <fullName>Little_YAC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Primary school age heart kids and heart siblings</description>
    <inlineHelpText>Primary school age heart kids and heart siblings</inlineHelpText>
    <label>Little YAC</label>
    <type>Checkbox</type>
</CustomField>