force-app/main/default/objects/Dependents__c/fields/Required_Surgery_Before_the_Age_of_1__c.field-meta.xml
<CustomField>
    <fullName>Required_Surgery_Before_the_Age_of_1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Heart Kid required heart surgery before the age of one</description>
    <inlineHelpText>Heart Kid required heart surgery before the age of one</inlineHelpText>
    <label>Required Surgery Before the Age of 1</label>
    <type>Checkbox</type>
</CustomField>