force-app/main/default/objects/Dependents__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Dependent_Type__c</columns>
    <columns>Dependent_Age__c</columns>
    <columns>Gender__c</columns>
    <columns>Primary_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dependent_Type__c</field>
        <operation>equals</operation>
        <value>Heart Kid</value>
    </filters>
    <filters>
        <field>Dependent_Age__c</field>
        <operation>greaterOrEqual</operation>
        <value>13</value>
    </filters>
    <filters>
        <field>Dependent_Age__c</field>
        <operation>lessOrEqual</operation>
        <value>18</value>
    </filters>
    <label>All</label>
</ListView>