force-app/main/default/objects/Dependents__c/listViews/Heart_Kids.listView-meta.xml
<ListView>
    <fullName>Heart_Kids</fullName>
    <columns>Primary_Contact__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Dependent_Type__c</columns>
    <columns>Birthdate__c</columns>
    <columns>Dependent_Age__c</columns>
    <columns>Gender__c</columns>
    <columns>Heart_Conditions__c</columns>
    <columns>Heart_Conditions_Other__c</columns>
    <columns>Required_Surgery_Before_the_Age_of_1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dependent_Type__c</field>
        <operation>equals</operation>
        <value>Heart Kid</value>
    </filters>
    <label>Heart Kids</label>
</ListView>