force-app/main/default/objects/Dependents__c/listViews/Hk_Parent_and_Dependent.listView-meta.xml
<ListView>
    <fullName>Hk_Parent_and_Dependent</fullName>
    <columns>NAME</columns>
    <columns>Primary_Contact__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Heart_Conditions__c</columns>
    <columns>Dependent_Age__c</columns>
    <columns>Dependent_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>Hk Parent and Dependent</label>
</ListView>